--- a/style.css
+++ b/style.css
@@ -1,25 +1,36 @@
-head {
-
+html {
+    scroll-behavior: smooth;
 }
 
 body {
     background-color: black;
+
 }
 
 h1 {
     color: white;
     text-align: center;
     font-size: 100px;
+    border-style: solid;
+    border-color: white;
 }
 
 h2 {
     color: whitesmoke;
     text-align: center;
+    font-size: 40px;
 }
 
 h3 {
     color: grey;
+    text-decoration: underline;
     text-align: center;
+    font-size: xx-large;
+}
+
+p {
+    color: white;
+    text-align: justify;
 }
 
 iframe {
@@ -31,6 +42,7 @@ iframe {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
+
   }
 
 .play-regular {
@@ -44,4 +56,30 @@ iframe {
     font-weight: 700;
     font-style: normal;
 }
-  
+
+nav{
+    background-color: white;
+    color: black;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    width: 100%;
+    overflow: hidden;
+}
+
+.nav-button{
+    background-color: black;
+    color: white;
+    border-color: white;
+    border-style: solid;
+    border-width: 1px;
+    height: inherit;
+    font-size: 3vw;
+    flex: 1;
+    transition-duration: 0.2s;
+}
+
+.nav-button:hover{
+    background-color: white;
+    color: black;
+}
