--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@ html {
 
 body {
     background-color: black;
-
 }
 
 h1 {
+    margin-top: 0;
     color: white;
     text-align: center;
     font-size: 100px;
@@ -64,7 +64,8 @@ nav{
     height: 60px;
     display: flex;
     width: 100%;
-    overflow: hidden;
+    position: sticky;
+    top: 0;
 }
 
 .nav-button{
