--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ nav{
     border-style: solid;
     border-width: 1px;
     height: inherit;
-    font-size: 2vw;
+    font-size: 40px;
     flex: 1;
     transition-duration: 0.2s;
 }
