--- a/style.css
+++ b/style.css
@@ -61,11 +61,11 @@ nav{
     background-color: white;
     color: black;
     width: 100%;
-    height: 60px;
+    height: 100px;
     display: flex;
     width: 100%;
     position: sticky;
-    top: 0;
+    top:0px;
 }
 
 .nav-button{
