--- a/style.css
+++ b/style.css
@@ -22,10 +22,17 @@ h2 {
 }
 
 h3 {
-    color: grey;
+    color: lightgrey;
     text-decoration: underline;
     text-align: center;
     font-size: xx-large;
+}
+
+h4 {
+    color: grey;
+    text-decoration: underline;
+    text-align: center;
+    font-size: 30px;
 }
 
 p {
@@ -83,6 +90,24 @@ nav{
 .nav-button:hover{
     background-color: white;
     color: black;
+}
+
+.project-grid{
+    display: grid;
+    background-color: white;
+    grid-template-columns: 50% 50%;
+    margin: 20px;
+    justify-content: space-evenly;
+    align-items: space-evenly;
+}
+
+.project{
+    background-color: black;
+    color: white;
+    border-color: white;
+    border-style: solid;
+    border-width: 1px;
+    padding: 20px;
 }
 
 #home{
