--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ body {
 
 h1 {
     margin-top: 0;
+    background-color: black;
     color: white;
+    opacity: 0.8;
     text-align: center;
     font-size: 100px;
     border-style: solid;
@@ -37,12 +39,22 @@ h4 {
 
 p {
     color: white;
-    text-align: justify;
 }
 
 iframe {
     width: 100%;
     aspect-ratio: 16/9;
+}
+
+nav{
+    background-color: white;
+    color: black;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    width: 100%;
+    position: sticky;
+    top: 0px;
 }
 
 .bebas-neue-regular {
@@ -62,17 +74,6 @@ iframe {
     font-family: "Play", sans-serif;
     font-weight: 700;
     font-style: normal;
-}
-
-nav{
-    background-color: white;
-    color: black;
-    width: 100%;
-    height: 100px;
-    display: flex;
-    width: 100%;
-    position: sticky;
-    top: 0px;
 }
 
 .nav-button{
@@ -116,6 +117,17 @@ nav{
 
 #about{
     scroll-margin-top: 100px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    padding-left: 5%;
+    padding-right: 5%;
+    background-image: url(assets/img/me.JPG);
+    background-color: rgba(0, 0, 0, 0.6);
+    background-blend-mode: multiply;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    height: 100vh;
+    display: block;
 }
 
 #projects{
