--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html {
 
 body {
     background-color: black;
+    margin: 1%;
 }
 
 h1 {
@@ -20,14 +21,14 @@ h1 {
 h2 {
     color: whitesmoke;
     text-align: center;
-    font-size: 40px;
+    font-size: 50px;
 }
 
 h3 {
     color: lightgrey;
     text-decoration: underline;
     text-align: center;
-    font-size: xx-large;
+    font-size: 40px;
 }
 
 h4 {
@@ -39,6 +40,7 @@ h4 {
 
 p {
     color: white;
+    text-align: left;
 }
 
 iframe {
@@ -47,21 +49,18 @@ iframe {
 }
 
 nav{
-    background-color: white;
-    color: black;
     width: 100%;
-    height: 100px;
+    height: 80px;
     display: flex;
-    width: 100%;
     position: sticky;
     top: 0px;
+    z-index: 1000;
 }
 
 .bebas-neue-regular {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
-
   }
 
 .play-regular {
@@ -95,20 +94,27 @@ nav{
 
 .grid{
     display: grid;
-    background-color: white;
     grid-template-columns: 50% 50%;
-    margin: 20px;
-    justify-content: space-evenly;
-    align-items: space-evenly;
+}
+
+.grid-rtl{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    direction: rtl;
 }
 
 .grid-item{
-    background-color: black;
-    color: white;
     border-color: white;
     border-style: solid;
-    border-width: 1px;
+    border-width: 1;
     padding: 20px;
+    direction: ltr;
+}
+
+.borderless-grid-item{
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    direction: ltr;
 }
 
 #home{
@@ -121,13 +127,17 @@ nav{
     padding-bottom: 1%;
     padding-left: 5%;
     padding-right: 5%;
-    background-image: url(assets/img/me.JPG);
-    background-color: rgba(0, 0, 0, 0.6);
+    background-image:
+        linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)),
+        url(assets/img/me.JPG);
     background-blend-mode: multiply;
     background-size: 100%;
     background-repeat: no-repeat;
     height: 100vh;
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: x-large;
 }
 
 #projects{
