--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ nav{
     padding-left: 5%;
     padding-right: 5%;
     background-image:
-        linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)),
+        linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)),
         url(assets/img/me.JPG);
     background-blend-mode: multiply;
     background-size: 100%;
