--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ iframe {
 
 nav {
   width: 100%;
-  height: 80px;
+  height: fit-content;
   display: flex;
   position: sticky;
   top: 0px;
@@ -99,6 +99,7 @@ nav {
   font-size: calc(2vh + 2vw);
   flex: 1;
   transition-duration: 0.2s;
+  padding: 10px;
 }
 
 .itch-button {
@@ -138,7 +139,7 @@ nav {
 
 .borderless-grid-item {
   padding: 3%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.8);
   direction: ltr;
   align-content: center;
 }
@@ -163,7 +164,7 @@ nav {
       rgba(0, 0, 0, 0),
       rgba(0, 0, 0, 1)
     ),
-    url(assets/img/me.JPG);
+    url(assets/img/Gent.JPG);
   background-size: contain;
   background-repeat: no-repeat;
   width: 100%;
@@ -179,9 +180,5 @@ nav {
 }
 
 #vfx {
-  scroll-margin-top: 100px;
-}
-
-#contact {
   scroll-margin-top: 100px;
 }
