--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@ ul {
 
 a {
     color: white;
-    font: 1vw;
 }
 
 iframe {
@@ -67,7 +66,7 @@ nav {
     height: fit-content;
     display: flex;
     position: sticky;
-    top: 0px;
+    top: 0;
     z-index: 1000;
 }
 
